--- a/style.css
+++ b/style.css
@@ -700,14 +700,14 @@ button:hover {
 
 /* MAIN PAGE ABOUT US */
 .experiential-addons {
-    background: linear-gradient(135deg, #917CED, #6F4DBF); /* Gradient background */
+    background: #5D3FD3; 
     color: #FFFFFF;
     padding: 40px 20px;
     text-align: center;
     border-radius: 8px;
     margin: 20px auto;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Add subtle shadow */
-    width: 80%; /* Center section with limited width */
+    width: 90%; /* Center section with limited width */
 }
 
 .experiential-addons .content h2 {
@@ -715,7 +715,7 @@ button:hover {
     margin-bottom: 15px;
     font-weight: bold;
     text-transform: uppercase;
-    color: #FFD700; /* Golden yellow for contrast */
+    color: #000; /* Golden yellow for contrast */
     letter-spacing: 1px;
 }
 
@@ -724,9 +724,5 @@ button:hover {
     line-height: 1.6;
     margin: 0 auto;
     width: 80%; /* Center text within the section */
-    color: #FDFDFD;
-}
-
-.experiential-addons .content p:hover {
-    text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8); /* Glow effect on hover */
+    color: #FFFFFF;
 }
